# ErPiGi

./: .gitignore  CMakeLists.txt  Enemy.cpp  ErPiGi.cpp  Game.cpp  Hero.cpp  Levels.cpp  README.md  Things_to_do.txt  main.cpp
ErPiGi-master/: Enemy.cpp  Game.cpp  Hero.cpp  Levels.cpp  README.md
ErPiGi-master/database/: Level10.csv  Level2.csv  Level5.csv  Level7.csv  Level8.csv  Level9.csv
character/enemy/: Enemy.cpp  Enemy.h  enemy.h
character/hero/: Hero.cpp  Hero.h  hero.h
character/player/: Player.cpp  Player.h
database/: Level1.csv  Level10.csv  Level3.csv  Level4.csv  Level5.csv  Level6.csv  Level7.csv  Level8.csv  Level9.csv
game/gameplay/: Game.cpp  Game.h
game/leveling/: levels.h
game/levels/: Levels.cpp  Levels.h
utils/: utils.cpp  utils.h
